--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,14 @@ wheels/
 # Custom
 *_data/
 *.epub
+# Environment variables
+.env
+
+# Python cache
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# Server logs
+server.log
